// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField should render a checkbox input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0 textarea,
.emotion-0 input {
  display: block;
}

.emotion-0:nth-child(5) {
  border-bottom: 1px solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testCheckboxID"
    >
      This is a text field
    </label>
    <input
      aria-describedby="testCheckboxID-error"
      aria-invalid="false"
      aria-required="false"
      id="testCheckboxID"
      name="testCheckboxID"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`FormField should render a tel input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0 textarea,
.emotion-0 input {
  display: block;
}

.emotion-0:nth-child(5) {
  border-bottom: 1px solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2 {
  border: solid 0.0625rem #141414;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testTelID"
    >
      This is a text field
    </label>
    <input
      aria-describedby="testTelID-error"
      aria-invalid="false"
      aria-required="false"
      class="emotion-2"
      id="testTelID"
      name="testTelID"
      type="tel"
      value=""
    />
  </div>
</div>
`;

exports[`FormField should render a text input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0 textarea,
.emotion-0 input {
  display: block;
}

.emotion-0:nth-child(5) {
  border-bottom: 1px solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2 {
  border: solid 0.0625rem #141414;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testTextID"
    >
      This is a text field
    </label>
    <input
      aria-describedby="testTextID-error"
      aria-invalid="false"
      aria-required="false"
      class="emotion-2"
      id="testTextID"
      name="testTextID"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`FormField should render a textarea input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0 textarea,
.emotion-0 input {
  display: block;
}

.emotion-0:nth-child(5) {
  border-bottom: 1px solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2 {
  border: solid 0.0625rem #141414;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  resize: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testTextAreaID"
    >
      This is a text field
    </label>
    <textarea
      aria-describedby="testTextAreaID-error"
      aria-invalid="false"
      aria-required="false"
      class="emotion-2"
      id="testTextAreaID"
      name="testTextAreaID"
      rows="4"
    />
  </div>
</div>
`;

exports[`FormField should render an email input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0 textarea,
.emotion-0 input {
  display: block;
}

.emotion-0:nth-child(5) {
  border-bottom: 1px solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2 {
  border: solid 0.0625rem #141414;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testEmailID"
    >
      This is a text field
    </label>
    <input
      aria-describedby="testEmailID-error"
      aria-invalid="false"
      aria-required="false"
      class="emotion-2"
      id="testEmailID"
      name="testEmailID"
      type="email"
      value=""
    />
  </div>
</div>
`;
